tags n such for DAS

--- a/localisation/english/PB_countries_cosmetic_l_english.yml
+++ b/localisation/english/PB_countries_cosmetic_l_english.yml
@@ -6517,9 +6517,33 @@
   PHI_German_DEF: "Viceroyalty of the Philippines"
   PHI_German_ADJ: "Filipino"
   
+  PHI_American: "Territory of the Philippines"
+  PHI_American_DEF: "Territory of the Philippines"
+  PHI_American_ADJ: "Filipino"
+  
+  PHI_Spanish: "General Captaincy of the Philippines"
+  PHI_Spanish_DEF: "General Captaincy of the Philippines"
+  PHI_Spanish_ADJ: "Filipino"
+  
+  MEX_Spanish: "Viceroyalty of New Spain"
+  MEX_Spanish_DEF: "The Viceroyalty of New Spain"
+  MEX_Spanish_ADJ: "New Spanish"
+
+  GUA_Spanish: "Captaincy General of Guatemala"
+  GUA_Spanish_DEF: "The Captaincy General of Guatemala"
+  GUA_Spanish_ADJ: "Guatemalan"
+
+  NWG_Divided: "Viceroyalty of New Granada"
+  NWG_Divided_DEF: "The Viceroyalty of New Granada"
+  NWG_Divided_ADJ: "New Granadan"
+ 
   DAS_Papua: "German New Guinea"
   DAS_Papua_DEF: "German New Guinea"
   DAS_Papua_ADJ: "Ostasien"
+  
+  DAS_RUS_Papua: "Russian New Guinea"
+  DAS_RUS_Papua_DEF: "Russian New Guinea"
+  DAS_RUS_Papua_ADJ: "Ostasien"
   
   PHI_Mexican: "Aerial Captaincy of the Philippines"
   PHI_Mexican_DEF: "Mexican Aerial Captaincy of the Philippine Islands"
