--- a/localisation/english/PB_country_specific/PB_Philippines_l_english.yml
+++ b/localisation/english/PB_country_specific/PB_Philippines_l_english.yml
@@ -18,24 +18,27 @@
   ###########################
   # DAS IDEAS
   ###########################
-  PB_Idea_DAS_Bundestag_Patience_1:0 "Bundestag : Out of Mind"
-  PB_Idea_DAS_Bundestag_Patience_2:0 "Bundestag : Out of Sight"
-  PB_Idea_DAS_Bundestag_Patience_3:0 "Bundestag : Out of Hand"
-  PB_Idea_DAS_Bundestag_Patience_4:0 "Bundestag : Outrage"
-  PB_Idea_DAS_Bundestag_Patience_5:0 "Bundestag : Outlast"
-  PB_Idea_DAS_Bundestag_Patience_6:0 "Bundestag : Outright"
-  
   PB_Idea_DAS_Open_Hand_Policy:0 "Open Hand Policy"
   PB_Idea_DAS_Nail_Biter_Doctrine:0 "Nail Biter Doctrine"
   
+  GEA_Bund_Rise_tt:0 "§RBundestag Patience Deteriorates§!"
+  GEA_Bund_Lower_tt:0 "§GBundestag Patience Rises§!"
+  
+  # Zitronella Influence States
   PB_Idea_DAS_Zitronella_Influence_1:0 "Insignificant Zitronella Influence"
   PB_Idea_DAS_Zitronella_Influence_2:0 "Adequate Zitronella Influence"
   PB_Idea_DAS_Zitronella_Influence_3:0 "Worrying Zitronella Influence"
   PB_Idea_DAS_Zitronella_Influence_4:0 "Obscene Zitronella Influence"
   PB_Idea_DAS_Zitronella_Influence_5:0 "Complete Zitronella Control"
+
+  # Bundestag Patience States
+  PB_Idea_DAS_Bundestag_Patience_1:0 "Bundestag: Out of Mind"
+  PB_Idea_DAS_Bundestag_Patience_2:0 "Bundestag: Out of Sight"
+  PB_Idea_DAS_Bundestag_Patience_3:0 "Bundestag: Out of Hand"
+  PB_Idea_DAS_Bundestag_Patience_4:0 "Bundestag: Outrage"
+  PB_Idea_DAS_Bundestag_Patience_5:0 "Bundestag: Outlast"
+  PB_Idea_DAS_Bundestag_Patience_6:0 "Bundestag: Outright"
   
-  GEA_Bund_Rise_tt:0 "§RBundestag Patience Deteriorates§!"
-  GEA_Bund_Lower_tt:0 "§GBundestag Patience Rises§!"
   ##########################
   # FOCUSES
   ##########################
