--- a/localisation/english/PB_country_specific/PB_Hungary_l_english.yml
+++ b/localisation/english/PB_country_specific/PB_Hungary_l_english.yml
@@ -1,5 +1,14 @@
 ﻿l_english:
 
+  ######################
+  ####  CHARACTERS  ####
+  ######################
+
+  ### LEADERS ###
+  HUN_ervin_szabo: "Ervin Szabó"
+  HUN_sandor_garbai: "Sándor Garbai"
+  HUN_bela_miklos: "Béla Miklós"
+  
   ##########################
   # MINISTERS
   ##########################
