DAS commit, part one, patch incoming for it

--- a/localisation/english/PB_country_specific/PB_Philippines_l_english.yml
+++ b/localisation/english/PB_country_specific/PB_Philippines_l_english.yml
@@ -24,6 +24,9 @@
   GEA_Bund_Rise_tt:0 "§RBundestag Patience Deteriorates§!"
   GEA_Bund_Lower_tt:0 "§GBundestag Patience Rises§!"
   
+  PB_DAS_Influence_category:0 "Administration Policies"
+  PB_DAS_Influence_category_desc:0 "\n\n\n\n\n\nBundestag Patience: [GetBundestagPatienceStatus]\nZitronella Influence: [GetZitronellaInfluenceStatus]\n\nOur administration in German East Asia must balance the demands of the Reichstag in Berlin with the influence of the local Zitronella elites, who control key resources and networks."
+  
   # Zitronella Influence States
   PB_Idea_DAS_Zitronella_Influence_1:0 "Insignificant Zitronella Influence"
   PB_Idea_DAS_Zitronella_Influence_2:0 "Adequate Zitronella Influence"
