Croatia and WIP fixing Persia

--- a/localisation/english/PB_countries_cosmetic_l_english.yml
+++ b/localisation/english/PB_countries_cosmetic_l_english.yml
@@ -6485,6 +6485,31 @@
   SWE_Occupied_Republic_cn_ADJ:0 "Swedish"
   SWE_Occupied_Republic_an_ADJ:0 "Swedish"
 
+  SLA_Occupied_Republic_ni:0 "Legionary Dalmatia"
+  SLA_Occupied_Republic_ni_DEF:0 "The Legionary Dalmatia"
+  SLA_Occupied_Republic_ds:0 "Dalmatian Republic"
+  SLA_Occupied_Republic_ds_DEF:0 "The Dalmatian Republic"
+  SLA_Occupied_Republic_rc:0 "Dalmatian Republic"
+  SLA_Occupied_Republic_rc_DEF:0 "The Dalmatian Republic"
+  SLA_Occupied_Republic_an:0 "Dalmatian Republic"
+  SLA_Occupied_Republic_an_DEF:0 "The Dalmatian Republic"
+  SLA_Occupied_Republic_cn:0 "Dalmatian Republic"
+  SLA_Occupied_Republic_cn_DEF:0 "The Dalmatian Republic"
+  SLA_Occupied_Republic_lb:0 "Dalmatian Republic"
+  SLA_Occupied_Republic_lb_DEF:0 "The Dalmatian Republic"
+  SLA_Occupied_Republic_ss:0 "Dalmatian Republic"
+  SLA_Occupied_Republic_ss_DEF:0 "The Dalmatian Republic"
+  SLA_Occupied_Republic_jc:0 "Commoner's State of Dalmatia"
+  SLA_Occupied_Republic_jc_DEF:0 "The Commoner's State of Dalmatia"
+  SLA_Occupied_Republic_ni_ADJ:0 "Croat-Dalmatian"
+  SLA_Occupied_Republic_rc_ADJ:0 "Croat-Dalmatian"
+  SLA_Occupied_Republic_lb_ADJ:0 "Croat-Dalmatian"
+  SLA_Occupied_Republic_ss_ADJ:0 "Croat-Dalmatian"
+  SLA_Occupied_Republic_jc_ADJ:0 "Croat-Dalmatian"
+  SLA_Occupied_Republic_ds_ADJ:0 "Croat-Dalmatian"
+  SLA_Occupied_Republic_cn_ADJ:0 "Croat-Dalmatian"
+  SLA_Occupied_Republic_an_ADJ:0 "Croat-Dalmatian"
+
   DGG_AD_condominium: "Anglo-Dutch Doggerland"
   DGG_AD_condominium_DEF: "The Anglo-Dutch Condominium of the Doggerland"
   DGG_AD_condominium_ADJ: "Doggerlander"
