Initial Balkan Peace Deals

--- a/localisation/english/PB_countries_cosmetic_l_english.yml
+++ b/localisation/english/PB_countries_cosmetic_l_english.yml
@@ -6486,7 +6486,7 @@
   SWE_Occupied_Republic_an_ADJ:0 "Swedish"
 
   SLA_Occupied_Republic_ni:0 "Legionary Dalmatia"
-  SLA_Occupied_Republic_ni_DEF:0 "The Legionary Dalmatia"
+  SLA_Occupied_Republic_ni_DEF:0 "The Legionary Union of Dalmatia"
   SLA_Occupied_Republic_ds:0 "Dalmatian Republic"
   SLA_Occupied_Republic_ds_DEF:0 "The Dalmatian Republic"
   SLA_Occupied_Republic_rc:0 "Dalmatian Republic"
@@ -6509,6 +6509,181 @@
   SLA_Occupied_Republic_ds_ADJ:0 "Croat-Dalmatian"
   SLA_Occupied_Republic_cn_ADJ:0 "Croat-Dalmatian"
   SLA_Occupied_Republic_an_ADJ:0 "Croat-Dalmatian"
+
+  DAL_Occupied_Monarchy_ni:0 "Principality of Ragusa"
+  DAL_Occupied_Monarchy_ni_DEF:0 "The Principality of Ragusa"
+  DAL_Occupied_Monarchy_ds:0 "Principality of Ragusa"
+  DAL_Occupied_Monarchy_ds_DEF:0 "The Principality of Ragusa"
+  DAL_Occupied_Monarchy_rc:0 "Principality of Ragusa"
+  DAL_Occupied_Monarchy_rc_DEF:0 "The Principality of Ragusa"
+  DAL_Occupied_Monarchy_an:0 "Principality of Ragusa"
+  DAL_Occupied_Monarchy_an_DEF:0 "The Principality of Ragusa"
+  DAL_Occupied_Monarchy_cn:0 "Principality of Ragusa"
+  DAL_Occupied_Monarchy_cn_DEF:0 "The Principality of Ragusa"
+  DAL_Occupied_Monarchy_lb:0 "Principality of Ragusa"
+  DAL_Occupied_Monarchy_lb_DEF:0 "The Principality of Ragusa"
+  DAL_Occupied_Monarchy_ss:0 "Principality of Ragusa"
+  DAL_Occupied_Monarchy_ss_DEF:0 "The Principality of Ragusa"
+  DAL_Occupied_Monarchy_jc:0 "Revolutionary Adriatic Federation"
+  DAL_Occupied_Monarchy_jc_DEF:0 "The Revolutionary Adriatic Federation"
+  DAL_Occupied_Monarchy_ni_ADJ:0 "Croat-Dalmatian"
+  DAL_Occupied_Monarchy_rc_ADJ:0 "Croat-Dalmatian"
+  DAL_Occupied_Monarchy_lb_ADJ:0 "Croat-Dalmatian"
+  DAL_Occupied_Monarchy_ss_ADJ:0 "Croat-Dalmatian"
+  DAL_Occupied_Monarchy_jc_ADJ:0 "Croat-Dalmatian"
+  DAL_Occupied_Monarchy_ds_ADJ:0 "Croat-Dalmatian"
+  DAL_Occupied_Monarchy_cn_ADJ:0 "Croat-Dalmatian"
+  DAL_Occupied_Monarchy_an_ADJ:0 "Croat-Dalmatian"
+
+  SER_Occupied_Republic_ni:0 "State of the Serbian People"
+  SER_Occupied_Republic_ni_DEF:0 "The State of the Serbian People"
+  SER_Occupied_Republic_ds:0 "Serbian Republic"
+  SER_Occupied_Republic_ds_DEF:0 "The Serbian Republic"
+  SER_Occupied_Republic_rc:0 "Serbian Republic"
+  SER_Occupied_Republic_rc_DEF:0 "The Serbian Republic"
+  SER_Occupied_Republic_an:0 "Serbian Republic"
+  SER_Occupied_Republic_an_DEF:0 "The Serbian Republic"
+  SER_Occupied_Republic_cn:0 "Serbian Republic"
+  SER_Occupied_Republic_cn_DEF:0 "The Serbian Republic"
+  SER_Occupied_Republic_lb:0 "Serbian Republic"
+  SER_Occupied_Republic_lb_DEF:0 "The Serbian Republic"
+  SER_Occupied_Republic_ss:0 "Serbian Republic"
+  SER_Occupied_Republic_ss_DEF:0 "The Serbian Republic"
+  SER_Occupied_Republic_jc:0 "Serbian Peasant Republic"
+  SER_Occupied_Republic_jc_DEF:0 "The Serbian Peasant Republic"
+  SER_Occupied_Republic_ni_ADJ:0 "Serbian"
+  SER_Occupied_Republic_rc_ADJ:0 "Serbian"
+  SER_Occupied_Republic_lb_ADJ:0 "Serbian"
+  SER_Occupied_Republic_ss_ADJ:0 "Serbian"
+  SER_Occupied_Republic_jc_ADJ:0 "Serbian"
+  SER_Occupied_Republic_ds_ADJ:0 "Serbian"
+  SER_Occupied_Republic_cn_ADJ:0 "Serbian"
+  SER_Occupied_Republic_an_ADJ:0 "Serbian"
+
+  BOS_Occupied_Monarchy_ni:0 "Bosnian Kingdom"
+  BOS_Occupied_Monarchy_ni_DEF:0 "The Bosnian Kingdom"
+  BOS_Occupied_Monarchy_ds:0 "Bosnian Kingdom"
+  BOS_Occupied_Monarchy_ds_DEF:0 "The Bosnian Kingdom"
+  BOS_Occupied_Monarchy_rc:0 "Bosnian Kingdom"
+  BOS_Occupied_Monarchy_rc_DEF:0 "The Bosnian Kingdom"
+  BOS_Occupied_Monarchy_an:0 "Bosnian Kingdom"
+  BOS_Occupied_Monarchy_an_DEF:0 "The Bosnian Kingdom"
+  BOS_Occupied_Monarchy_cn:0 "Bosnian Kingdom"
+  BOS_Occupied_Monarchy_cn_DEF:0 "The Bosnian Kingdom"
+  BOS_Occupied_Monarchy_lb:0 "Bosnian Kingdom"
+  BOS_Occupied_Monarchy_lb_DEF:0 "The Bosnian Kingdom"
+  BOS_Occupied_Monarchy_ss:0 "Bosnian Kingdom"
+  BOS_Occupied_Monarchy_ss_DEF:0 "The Bosnian Kingdom"
+  BOS_Occupied_Monarchy_jc:0 "Free Bosnian Republic"
+  BOS_Occupied_Monarchy_jc_DEF:0 "The Free Bosnian Republic"
+  BOS_Occupied_Monarchy_ni_ADJ:0 "Bosniak"
+  BOS_Occupied_Monarchy_rc_ADJ:0 "Bosniak"
+  BOS_Occupied_Monarchy_lb_ADJ:0 "Bosniak"
+  BOS_Occupied_Monarchy_ss_ADJ:0 "Bosniak"
+  BOS_Occupied_Monarchy_jc_ADJ:0 "Bosniak"
+  BOS_Occupied_Monarchy_ds_ADJ:0 "Bosniak"
+  BOS_Occupied_Monarchy_cn_ADJ:0 "Bosniak"
+  BOS_Occupied_Monarchy_an_ADJ:0 "Bosniak"
+
+  BOS_Occupied_Republic_ni:0 "Bosnia-Herzegovina"
+  BOS_Occupied_Republic_ni_DEF:0 "The Federation of Bosnia-Herzegovina"
+  BOS_Occupied_Republic_ds:0 "Bosnia-Herzegovina"
+  BOS_Occupied_Republic_ds_DEF:0 "The Federation of Bosnia-Herzegovina"
+  BOS_Occupied_Republic_rc:0 "Bosnia-Herzegovina"
+  BOS_Occupied_Republic_rc_DEF:0 "The Federation of Bosnia-Herzegovina"
+  BOS_Occupied_Republic_an:0 "Bosnia-Herzegovina"
+  BOS_Occupied_Republic_an_DEF:0 "The Federation of Bosnia-Herzegovina"
+  BOS_Occupied_Republic_cn:0 "Bosnia-Herzegovina"
+  BOS_Occupied_Republic_cn_DEF:0 "The Federation of Bosnia-Herzegovina"
+  BOS_Occupied_Republic_lb:0 "Bosnia-Herzegovina"
+  BOS_Occupied_Republic_lb_DEF:0 "The Federation of Bosnia-Herzegovina"
+  BOS_Occupied_Republic_ss:0 "Bosnia-Herzegovina"
+  BOS_Occupied_Republic_ss_DEF:0 "The Federation of Bosnia-Herzegovina"
+  BOS_Occupied_Republic_jc:0 "Free Bosnian Republic"
+  BOS_Occupied_Republic_jc_DEF:0 "The Free Bosnian Republic"
+  BOS_Occupied_Republic_ni_ADJ:0 "Bosniak"
+  BOS_Occupied_Republic_rc_ADJ:0 "Bosniak"
+  BOS_Occupied_Republic_lb_ADJ:0 "Bosniak"
+  BOS_Occupied_Republic_ss_ADJ:0 "Bosniak"
+  BOS_Occupied_Republic_jc_ADJ:0 "Bosniak"
+  BOS_Occupied_Republic_ds_ADJ:0 "Bosniak"
+  BOS_Occupied_Republic_cn_ADJ:0 "Bosniak"
+  BOS_Occupied_Republic_an_ADJ:0 "Bosniak"
+
+  MNT_Occupied_Republic_ni:0 "Montenegrin Republic"
+  MNT_Occupied_Republic_ni_DEF:0 "The Montenegrin Republic"
+  MNT_Occupied_Republic_ds:0 "Montenegrin Republic"
+  MNT_Occupied_Republic_ds_DEF:0 "The Montenegrin Republic"
+  MNT_Occupied_Republic_rc:0 "Montenegrin Republic"
+  MNT_Occupied_Republic_rc_DEF:0 "The Montenegrin Republic"
+  MNT_Occupied_Republic_an:0 "Montenegrin Republic"
+  MNT_Occupied_Republic_an_DEF:0 "The Montenegrin Republic"
+  MNT_Occupied_Republic_cn:0 "Montenegrin Republic"
+  MNT_Occupied_Republic_cn_DEF:0 "The Montenegrin Republic"
+  MNT_Occupied_Republic_lb:0 "Montenegrin Republic"
+  MNT_Occupied_Republic_lb_DEF:0 "The Montenegrin Republic"
+  MNT_Occupied_Republic_ss:0 "Montenegrin Republic"
+  MNT_Occupied_Republic_ss_DEF:0 "The Montenegrin Republic"
+  MNT_Occupied_Republic_jc:0 "Revolutionary Montenegro"
+  MNT_Occupied_Republic_jc_DEF:0 "The Revolutionary Montenegro"
+  MNT_Occupied_Republic_ni_ADJ:0 "Montenegrin"
+  MNT_Occupied_Republic_rc_ADJ:0 "Montenegrin"
+  MNT_Occupied_Republic_lb_ADJ:0 "Montenegrin"
+  MNT_Occupied_Republic_ss_ADJ:0 "Montenegrin"
+  MNT_Occupied_Republic_jc_ADJ:0 "Montenegrin"
+  MNT_Occupied_Republic_ds_ADJ:0 "Montenegrin"
+  MNT_Occupied_Republic_cn_ADJ:0 "Montenegrin"
+  MNT_Occupied_Republic_an_ADJ:0 "Montenegrin"
+
+  SER_Occupied_Republic_with_Montenegro_ni:0 "Black Hand State of the South Slavs"
+  SER_Occupied_Republic_with_Montenegro_ni_DEF:0 "The Black Hand State of the South Slavs"
+  SER_Occupied_Republic_with_Montenegro_ds:0 "Republic of Serbia-Montenegro"
+  SER_Occupied_Republic_with_Montenegro_ds_DEF:0 "The Republic of Serbia-Montenegro"
+  SER_Occupied_Republic_with_Montenegro_rc:0 "Republic of Serbia-Montenegro"
+  SER_Occupied_Republic_with_Montenegro_rc_DEF:0 "The Republic of Serbia-Montenegro"
+  SER_Occupied_Republic_with_Montenegro_an:0 "Republic of Serbia-Montenegro"
+  SER_Occupied_Republic_with_Montenegro_an_DEF:0 "The Republic of Serbia-Montenegro"
+  SER_Occupied_Republic_with_Montenegro_cn:0 "Republic of Serbia-Montenegro"
+  SER_Occupied_Republic_with_Montenegro_cn_DEF:0 "The Republic of Serbia-Montenegro"
+  SER_Occupied_Republic_with_Montenegro_lb:0 "Republic of Serbia-Montenegro"
+  SER_Occupied_Republic_with_Montenegro_lb_DEF:0 "The Republic of Serbia-Montenegro"
+  SER_Occupied_Republic_with_Montenegro_ss:0 "Republic of Serbia-Montenegro"
+  SER_Occupied_Republic_with_Montenegro_ss_DEF:0 "The Republic of Serbia-Montenegro"
+  SER_Occupied_Republic_with_Montenegro_jc:0 "Concordian Republic of Serbia-Montenegro"
+  SER_Occupied_Republic_with_Montenegro_jc_DEF:0 "The Concordian Republic of Serbia-Montenegro"
+  SER_Occupied_Republic_with_Montenegro_ni_ADJ:0 "Serbo-Croatian"
+  SER_Occupied_Republic_with_Montenegro_rc_ADJ:0 "Serbo-Croatian"
+  SER_Occupied_Republic_with_Montenegro_lb_ADJ:0 "Serbo-Croatian"
+  SER_Occupied_Republic_with_Montenegro_ss_ADJ:0 "Serbo-Croatian"
+  SER_Occupied_Republic_with_Montenegro_jc_ADJ:0 "Serbo-Croatian"
+  SER_Occupied_Republic_with_Montenegro_ds_ADJ:0 "Serbo-Croatian"
+  SER_Occupied_Republic_with_Montenegro_cn_ADJ:0 "Serbo-Croatian"
+  SER_Occupied_Republic_with_Montenegro_an_ADJ:0 "Serbo-Croatian"
+
+  SER_Occupied_Monarchy_with_Montenegro_ni:0 "Kingdom of Serbia-Montenegro"
+  SER_Occupied_Monarchy_with_Montenegro_ni_DEF:0 "The Kingdom of Serbia-Montenegro"
+  SER_Occupied_Monarchy_with_Montenegro_ds:0 "Kingdom of Serbia-Montenegro"
+  SER_Occupied_Monarchy_with_Montenegro_ds_DEF:0 "The Kingdom of Serbia-Montenegro"
+  SER_Occupied_Monarchy_with_Montenegro_rc:0 "Kingdom of Serbia-Montenegro"
+  SER_Occupied_Monarchy_with_Montenegro_rc_DEF:0 "The Kingdom of Serbia-Montenegro"
+  SER_Occupied_Monarchy_with_Montenegro_an:0 "Kingdom of Serbia-Montenegro"
+  SER_Occupied_Monarchy_with_Montenegro_an_DEF:0 "The Kingdom of Serbia-Montenegro"
+  SER_Occupied_Monarchy_with_Montenegro_cn:0 "Kingdom of Serbia-Montenegro"
+  SER_Occupied_Monarchy_with_Montenegro_cn_DEF:0 "The Kingdom of Serbia-Montenegro"
+  SER_Occupied_Monarchy_with_Montenegro_lb:0 "Kingdom of Serbia-Montenegro"
+  SER_Occupied_Monarchy_with_Montenegro_lb_DEF:0 "The Kingdom of Serbia-Montenegro"
+  SER_Occupied_Monarchy_with_Montenegro_ss:0 "Kingdom of Serbia-Montenegro"
+  SER_Occupied_Monarchy_with_Montenegro_ss_DEF:0 "The Kingdom of Serbia-Montenegro"
+  SER_Occupied_Monarchy_with_Montenegro_jc:0 "Unity State of Serbia-Montenegro"
+  SER_Occupied_Monarchy_with_Montenegro_jc_DEF:0 "The Unity State of Serbia-Montenegro"
+  SER_Occupied_Monarchy_with_Montenegro_ni_ADJ:0 "Serbo-Croatian"
+  SER_Occupied_Monarchy_with_Montenegro_rc_ADJ:0 "Serbo-Croatian"
+  SER_Occupied_Monarchy_with_Montenegro_lb_ADJ:0 "Serbo-Croatian"
+  SER_Occupied_Monarchy_with_Montenegro_ss_ADJ:0 "Serbo-Croatian"
+  SER_Occupied_Monarchy_with_Montenegro_jc_ADJ:0 "Serbo-Croatian"
+  SER_Occupied_Monarchy_with_Montenegro_ds_ADJ:0 "Serbo-Croatian"
+  SER_Occupied_Monarchy_with_Montenegro_cn_ADJ:0 "Serbo-Croatian"
+  SER_Occupied_Monarchy_with_Montenegro_an_ADJ:0 "Serbo-Croatian"
 
   DGG_AD_condominium: "Anglo-Dutch Doggerland"
   DGG_AD_condominium_DEF: "The Anglo-Dutch Condominium of the Doggerland"
