--- a/localisation/english/PB_Generic_Ideas_l_english.yml
+++ b/localisation/english/PB_Generic_Ideas_l_english.yml
@@ -53,3 +53,8 @@
  PB_generic_mandatory_conscription:0 "Mandatory Conscription"
  PB_generic_nation_reborn:0 "A Nation Reborn"
 
+
+##DYNAMIC MODIFIERS##
+long_term_focus:0 "Long Term Focus"
+KRA_gifts_of_the_furnace:0 "Gifts of the Furnace"
+
