--- a/localisation/english/PB_countries_cosmetic_l_english.yml
+++ b/localisation/english/PB_countries_cosmetic_l_english.yml
@@ -6810,6 +6810,281 @@
   BNA_Occupied_Monarchy_Kraut_cn_ADJ:0 "Banatian"
   BNA_Occupied_Monarchy_Kraut_an_ADJ:0 "Banatian"
 
+  TRA_Occupied_Monarchy_ni:0 "Principality of Transylvania"
+  TRA_Occupied_Monarchy_ni_DEF:0 "The Principality of Transylvania"
+  TRA_Occupied_Monarchy_ds:0 "Principality of Transylvania"
+  TRA_Occupied_Monarchy_ds_DEF:0 "The Principality of Transylvania"
+  TRA_Occupied_Monarchy_rc:0 "Principality of Transylvania"
+  TRA_Occupied_Monarchy_rc_DEF:0 "The Principality of Transylvania"
+  TRA_Occupied_Monarchy_an:0 "Principality of Transylvania"
+  TRA_Occupied_Monarchy_an_DEF:0 "The Principality of Transylvania"
+  TRA_Occupied_Monarchy_cn:0 "Principality of Transylvania"
+  TRA_Occupied_Monarchy_cn_DEF:0 "The Principality of Transylvania"
+  TRA_Occupied_Monarchy_lb:0 "Principality of Transylvania"
+  TRA_Occupied_Monarchy_lb_DEF:0 "The Principality of Transylvania"
+  TRA_Occupied_Monarchy_ss:0 "Principality of Transylvania"
+  TRA_Occupied_Monarchy_ss_DEF:0 "The Principality of Transylvania"
+  TRA_Occupied_Monarchy_jc:0 "Carpathian Republic"
+  TRA_Occupied_Monarchy_jc_DEF:0 "The Carpathian Republic"
+  TRA_Occupied_Monarchy_ni_ADJ:0 "Transylvanian"
+  TRA_Occupied_Monarchy_rc_ADJ:0 "Transylvanian"
+  TRA_Occupied_Monarchy_lb_ADJ:0 "Transylvanian"
+  TRA_Occupied_Monarchy_ss_ADJ:0 "Transylvanian"
+  TRA_Occupied_Monarchy_jc_ADJ:0 "Transylvanian"
+  TRA_Occupied_Monarchy_ds_ADJ:0 "Transylvanian"
+  TRA_Occupied_Monarchy_cn_ADJ:0 "Transylvanian"
+  TRA_Occupied_Monarchy_an_ADJ:0 "Transylvanian"
+
+  TRA_Occupied_Republic_ni:0 "Transylvanian Patriotic Republic"
+  TRA_Occupied_Republic_ni_DEF:0 "The Transylvanian Patriotic Republic"
+  TRA_Occupied_Republic_ds:0 "Carpathian Republic"
+  TRA_Occupied_Republic_ds_DEF:0 "The Carpathian Republic"
+  TRA_Occupied_Republic_rc:0 "Carpathian Republic"
+  TRA_Occupied_Republic_rc_DEF:0 "The Carpathian Republic"
+  TRA_Occupied_Republic_an:0 "Carpathian Republic"
+  TRA_Occupied_Republic_an_DEF:0 "The Carpathian Republic"
+  TRA_Occupied_Republic_cn:0 "Carpathian Republic"
+  TRA_Occupied_Republic_cn_DEF:0 "The Carpathian Republic"
+  TRA_Occupied_Republic_lb:0 "Carpathian Republic"
+  TRA_Occupied_Republic_lb_DEF:0 "The Carpathian Republic"
+  TRA_Occupied_Republic_ss:0 "Carpathian Republic"
+  TRA_Occupied_Republic_ss_DEF:0 "The Carpathian Republic"
+  TRA_Occupied_Republic_jc:0 "Carpathian Common Republic"
+  TRA_Occupied_Republic_jc_DEF:0 "The Carpathian Common Republic"
+  TRA_Occupied_Republic_ni_ADJ:0 "Transylvanian"
+  TRA_Occupied_Republic_rc_ADJ:0 "Transylvanian"
+  TRA_Occupied_Republic_lb_ADJ:0 "Transylvanian"
+  TRA_Occupied_Republic_ss_ADJ:0 "Transylvanian"
+  TRA_Occupied_Republic_jc_ADJ:0 "Transylvanian"
+  TRA_Occupied_Republic_ds_ADJ:0 "Transylvanian"
+  TRA_Occupied_Republic_cn_ADJ:0 "Transylvanian"
+  TRA_Occupied_Republic_an_ADJ:0 "Transylvanian"
+
+  SLO_Occupied_Monarchy_ni:0 "Duchy of Slovakia"
+  SLO_Occupied_Monarchy_ni_DEF:0 "The Duchy of Slovakia"
+  SLO_Occupied_Monarchy_ds:0 "Duchy of Slovakia"
+  SLO_Occupied_Monarchy_ds_DEF:0 "The Duchy of Slovakia"
+  SLO_Occupied_Monarchy_rc:0 "Duchy of Slovakia"
+  SLO_Occupied_Monarchy_rc_DEF:0 "The Duchy of Slovakia"
+  SLO_Occupied_Monarchy_an:0 "Duchy of Slovakia"
+  SLO_Occupied_Monarchy_an_DEF:0 "The Duchy of Slovakia"
+  SLO_Occupied_Monarchy_cn:0 "Duchy of Slovakia"
+  SLO_Occupied_Monarchy_cn_DEF:0 "The Duchy of Slovakia"
+  SLO_Occupied_Monarchy_lb:0 "Duchy of Slovakia"
+  SLO_Occupied_Monarchy_lb_DEF:0 "The Duchy of Slovakia"
+  SLO_Occupied_Monarchy_ss:0 "Duchy of Slovakia"
+  SLO_Occupied_Monarchy_ss_DEF:0 "The Duchy of Slovakia"
+  SLO_Occupied_Monarchy_jc:0 "Slovak People's Commonwealth"
+  SLO_Occupied_Monarchy_jc_DEF:0 "The Slovak People's Commonwealth"
+  SLO_Occupied_Monarchy_ni_ADJ:0 "Slovakian"
+  SLO_Occupied_Monarchy_rc_ADJ:0 "Slovakian"
+  SLO_Occupied_Monarchy_lb_ADJ:0 "Slovakian"
+  SLO_Occupied_Monarchy_ss_ADJ:0 "Slovakian"
+  SLO_Occupied_Monarchy_jc_ADJ:0 "Slovakian"
+  SLO_Occupied_Monarchy_ds_ADJ:0 "Slovakian"
+  SLO_Occupied_Monarchy_cn_ADJ:0 "Slovakian"
+  SLO_Occupied_Monarchy_an_ADJ:0 "Slovakian"
+
+  SLO_Occupied_Republic_ni:0 "Sovereign Republic of Slovakia"
+  SLO_Occupied_Republic_ni_DEF:0 "The Sovereign Republic of Slovakia"
+  SLO_Occupied_Republic_ds:0 "Slovak Republic"
+  SLO_Occupied_Republic_ds_DEF:0 "The Slovak Republic"
+  SLO_Occupied_Republic_rc:0 "Slovak Republic"
+  SLO_Occupied_Republic_rc_DEF:0 "The Slovak Republic"
+  SLO_Occupied_Republic_an:0 "Slovak Republic"
+  SLO_Occupied_Republic_an_DEF:0 "The Slovak Republic"
+  SLO_Occupied_Republic_cn:0 "Slovak Republic"
+  SLO_Occupied_Republic_cn_DEF:0 "The Slovak Republic"
+  SLO_Occupied_Republic_lb:0 "Slovak Republic"
+  SLO_Occupied_Republic_lb_DEF:0 "The Slovak Republic"
+  SLO_Occupied_Republic_ss:0 "Slovak Republic"
+  SLO_Occupied_Republic_ss_DEF:0 "The Slovak Republic"
+  SLO_Occupied_Republic_jc:0 "Slovak Commonwealth"
+  SLO_Occupied_Republic_jc_DEF:0 "The Slovak Commonwealth"
+  SLO_Occupied_Republic_ni_ADJ:0 "Slovakian"
+  SLO_Occupied_Republic_rc_ADJ:0 "Slovakian"
+  SLO_Occupied_Republic_lb_ADJ:0 "Slovakian"
+  SLO_Occupied_Republic_ss_ADJ:0 "Slovakian"
+  SLO_Occupied_Republic_jc_ADJ:0 "Slovakian"
+  SLO_Occupied_Republic_ds_ADJ:0 "Slovakian"
+  SLO_Occupied_Republic_cn_ADJ:0 "Slovakian"
+  SLO_Occupied_Republic_an_ADJ:0 "Slovakian"
+
+  SLO_Occupied_Monarchy_Krauts_ni:0 "Sovereign Republic of Slovakia"
+  SLO_Occupied_Monarchy_Krauts_ni_DEF:0 "The Sovereign Republic of Slovakia"
+  SLO_Occupied_Monarchy_Krauts_ds:0 "Crownland of Slovakia"
+  SLO_Occupied_Monarchy_Krauts_ds_DEF:0 "The Crownland of Slovakia"
+  SLO_Occupied_Monarchy_Krauts_rc:0 "Crownland of Slovakia"
+  SLO_Occupied_Monarchy_Krauts_rc_DEF:0 "The Crownland of Slovakia"
+  SLO_Occupied_Monarchy_Krauts_an:0 "Crownland of Slovakia"
+  SLO_Occupied_Monarchy_Krauts_an_DEF:0 "The Crownland of Slovakia"
+  SLO_Occupied_Monarchy_Krauts_cn:0 "Crownland of Slovakia"
+  SLO_Occupied_Monarchy_Krauts_cn_DEF:0 "The Crownland of Slovakia"
+  SLO_Occupied_Monarchy_Krauts_lb:0 "Crownland of Slovakia"
+  SLO_Occupied_Monarchy_Krauts_lb_DEF:0 "The Crownland of Slovakia"
+  SLO_Occupied_Monarchy_Krauts_ss:0 "Crownland of Slovakia"
+  SLO_Occupied_Monarchy_Krauts_ss_DEF:0 "The Crownland of Slovakia"
+  SLO_Occupied_Monarchy_Krauts_jc:0 "Slovak Commonwealth"
+  SLO_Occupied_Monarchy_Krauts_jc_DEF:0 "The Slovak Commonwealth"
+  SLO_Occupied_Monarchy_Krauts_ni_ADJ:0 "Slovakian"
+  SLO_Occupied_Monarchy_Krauts_rc_ADJ:0 "Slovakian"
+  SLO_Occupied_Monarchy_Krauts_lb_ADJ:0 "Slovakian"
+  SLO_Occupied_Monarchy_Krauts_ss_ADJ:0 "Slovakian"
+  SLO_Occupied_Monarchy_Krauts_jc_ADJ:0 "Slovakian"
+  SLO_Occupied_Monarchy_Krauts_ds_ADJ:0 "Slovakian"
+  SLO_Occupied_Monarchy_Krauts_cn_ADJ:0 "Slovakian"
+  SLO_Occupied_Monarchy_Krauts_an_ADJ:0 "Slovakian"
+
+  ROM_Occupied_Monarchy_ni:0 "Principality of Wallachia"
+  ROM_Occupied_Monarchy_ni_DEF:0 "The Principality of Wallachia"
+  ROM_Occupied_Monarchy_ds:0 "Principality of Wallachia"
+  ROM_Occupied_Monarchy_ds_DEF:0 "The Principality of Wallachia"
+  ROM_Occupied_Monarchy_rc:0 "Principality of Wallachia"
+  ROM_Occupied_Monarchy_rc_DEF:0 "The Principality of Wallachia"
+  ROM_Occupied_Monarchy_an:0 "Principality of Wallachia"
+  ROM_Occupied_Monarchy_an_DEF:0 "The Principality of Wallachia"
+  ROM_Occupied_Monarchy_cn:0 "Principality of Wallachia"
+  ROM_Occupied_Monarchy_cn_DEF:0 "The Principality of Wallachia"
+  ROM_Occupied_Monarchy_lb:0 "Principality of Wallachia"
+  ROM_Occupied_Monarchy_lb_DEF:0 "The Principality of Wallachia"
+  ROM_Occupied_Monarchy_ss:0 "Principality of Wallachia"
+  ROM_Occupied_Monarchy_ss_DEF:0 "The Principality of Wallachia"
+  ROM_Occupied_Monarchy_jc:0 "Free Wallachian Republic"
+  ROM_Occupied_Monarchy_jc_DEF:0 "The Free Wallachian Republic"
+  ROM_Occupied_Monarchy_ni_ADJ:0 "Wallachian"
+  ROM_Occupied_Monarchy_rc_ADJ:0 "Wallachian"
+  ROM_Occupied_Monarchy_lb_ADJ:0 "Wallachian"
+  ROM_Occupied_Monarchy_ss_ADJ:0 "Wallachian"
+  ROM_Occupied_Monarchy_jc_ADJ:0 "Wallachian"
+  ROM_Occupied_Monarchy_ds_ADJ:0 "Wallachian"
+  ROM_Occupied_Monarchy_cn_ADJ:0 "Wallachian"
+  ROM_Occupied_Monarchy_an_ADJ:0 "Wallachian"
+
+  ROM_Occupied_Republic_ni:0 "Legionary Republic of Wallachia"
+  ROM_Occupied_Republic_ni_DEF:0 "The Legionary Republic of Wallachia"
+  ROM_Occupied_Republic_ds:0 "Wallachian Republic"
+  ROM_Occupied_Republic_ds_DEF:0 "The Wallachian Republic"
+  ROM_Occupied_Republic_rc:0 "Wallachian Republic"
+  ROM_Occupied_Republic_rc_DEF:0 "The Wallachian Republic"
+  ROM_Occupied_Republic_an:0 "Wallachian Republic"
+  ROM_Occupied_Republic_an_DEF:0 "The Wallachian Republic"
+  ROM_Occupied_Republic_cn:0 "Wallachian Republic"
+  ROM_Occupied_Republic_cn_DEF:0 "The Wallachian Republic"
+  ROM_Occupied_Republic_lb:0 "Wallachian Republic"
+  ROM_Occupied_Republic_lb_DEF:0 "The Wallachian Republic"
+  ROM_Occupied_Republic_ss:0 "Wallachian Republic"
+  ROM_Occupied_Republic_ss_DEF:0 "The Wallachian Republic"
+  ROM_Occupied_Republic_jc:0 "Free Wallachian Republic"
+  ROM_Occupied_Republic_jc_DEF:0 "The Free Wallachian Republic"
+  ROM_Occupied_Republic_ni_ADJ:0 "Wallachian"
+  ROM_Occupied_Republic_rc_ADJ:0 "Wallachian"
+  ROM_Occupied_Republic_lb_ADJ:0 "Wallachian"
+  ROM_Occupied_Republic_ss_ADJ:0 "Wallachian"
+  ROM_Occupied_Republic_jc_ADJ:0 "Wallachian"
+  ROM_Occupied_Republic_ds_ADJ:0 "Wallachian"
+  ROM_Occupied_Republic_cn_ADJ:0 "Wallachian"
+  ROM_Occupied_Republic_an_ADJ:0 "Wallachian"
+
+  MOL_Occupied_Monarchy_ni:0 "Principality of Moldavia"
+  MOL_Occupied_Monarchy_ni_DEF:0 "The Principality of Moldavia"
+  MOL_Occupied_Monarchy_ds:0 "Principality of Moldavia"
+  MOL_Occupied_Monarchy_ds_DEF:0 "The Principality of Moldavia"
+  MOL_Occupied_Monarchy_rc:0 "Principality of Moldavia"
+  MOL_Occupied_Monarchy_rc_DEF:0 "The Principality of Moldavia"
+  MOL_Occupied_Monarchy_an:0 "Principality of Moldavia"
+  MOL_Occupied_Monarchy_an_DEF:0 "The Principality of Moldavia"
+  MOL_Occupied_Monarchy_cn:0 "Principality of Moldavia"
+  MOL_Occupied_Monarchy_cn_DEF:0 "The Principality of Moldavia"
+  MOL_Occupied_Monarchy_lb:0 "Principality of Moldavia"
+  MOL_Occupied_Monarchy_lb_DEF:0 "The Principality of Moldavia"
+  MOL_Occupied_Monarchy_ss:0 "Principality of Moldavia"
+  MOL_Occupied_Monarchy_ss_DEF:0 "The Principality of Moldavia"
+  MOL_Occupied_Monarchy_jc:0 "Revolutionary Moldavia"
+  MOL_Occupied_Monarchy_jc_DEF:0 "The Revolutionary Moldavia"
+  MOL_Occupied_Monarchy_ni_ADJ:0 "Moldavian"
+  MOL_Occupied_Monarchy_rc_ADJ:0 "Moldavian"
+  MOL_Occupied_Monarchy_lb_ADJ:0 "Moldavian"
+  MOL_Occupied_Monarchy_ss_ADJ:0 "Moldavian"
+  MOL_Occupied_Monarchy_jc_ADJ:0 "Moldavian"
+  MOL_Occupied_Monarchy_ds_ADJ:0 "Moldavian"
+  MOL_Occupied_Monarchy_cn_ADJ:0 "Moldavian"
+  MOL_Occupied_Monarchy_an_ADJ:0 "Moldavian"
+
+  MOL_Occupied_Republic_ni:0 "Second Moldavian Resurrectionist State"
+  MOL_Occupied_Republic_ni_DEF:0 "The Second Moldavian Resurrectionist State"
+  MOL_Occupied_Republic_ds:0 "Moldavian Republic"
+  MOL_Occupied_Republic_ds_DEF:0 "The Moldavian Republic"
+  MOL_Occupied_Republic_rc:0 "Moldavian Republic"
+  MOL_Occupied_Republic_rc_DEF:0 "The Moldavian Republic"
+  MOL_Occupied_Republic_an:0 "Moldavian Republic"
+  MOL_Occupied_Republic_an_DEF:0 "The Moldavian Republic"
+  MOL_Occupied_Republic_cn:0 "Moldavian Republic"
+  MOL_Occupied_Republic_cn_DEF:0 "The Moldavian Republic"
+  MOL_Occupied_Republic_lb:0 "Moldavian Republic"
+  MOL_Occupied_Republic_lb_DEF:0 "The Moldavian Republic"
+  MOL_Occupied_Republic_ss:0 "Moldavian Republic"
+  MOL_Occupied_Republic_ss_DEF:0 "The Moldavian Republic"
+  MOL_Occupied_Republic_jc:0 "Revolutionary Moldavia"
+  MOL_Occupied_Republic_jc_DEF:0 "The Revolutionary Moldavia"
+  MOL_Occupied_Republic_ni_ADJ:0 "Moldavian"
+  MOL_Occupied_Republic_rc_ADJ:0 "Moldavian"
+  MOL_Occupied_Republic_lb_ADJ:0 "Moldavian"
+  MOL_Occupied_Republic_ss_ADJ:0 "Moldavian"
+  MOL_Occupied_Republic_jc_ADJ:0 "Moldavian"
+  MOL_Occupied_Republic_ds_ADJ:0 "Moldavian"
+  MOL_Occupied_Republic_cn_ADJ:0 "Moldavian"
+  MOL_Occupied_Republic_an_ADJ:0 "Moldavian"
+
+  BUL_Occupied_Monarchy_ni:0 "Principality of Bulgaria"
+  BUL_Occupied_Monarchy_ni_DEF:0 "The Principality of Bulgaria"
+  BUL_Occupied_Monarchy_ds:0 "Principality of Bulgaria"
+  BUL_Occupied_Monarchy_ds_DEF:0 "The Principality of Bulgaria"
+  BUL_Occupied_Monarchy_rc:0 "Principality of Bulgaria"
+  BUL_Occupied_Monarchy_rc_DEF:0 "The Principality of Bulgaria"
+  BUL_Occupied_Monarchy_an:0 "Principality of Bulgaria"
+  BUL_Occupied_Monarchy_an_DEF:0 "The Principality of Bulgaria"
+  BUL_Occupied_Monarchy_cn:0 "Principality of Bulgaria"
+  BUL_Occupied_Monarchy_cn_DEF:0 "The Principality of Bulgaria"
+  BUL_Occupied_Monarchy_lb:0 "Principality of Bulgaria"
+  BUL_Occupied_Monarchy_lb_DEF:0 "The Principality of Bulgaria"
+  BUL_Occupied_Monarchy_ss:0 "Principality of Bulgaria"
+  BUL_Occupied_Monarchy_ss_DEF:0 "The Principality of Bulgaria"
+  BUL_Occupied_Monarchy_jc:0 "Sovereign Assembly of Bulgaria"
+  BUL_Occupied_Monarchy_jc_DEF:0 "The Sovereign Assembly of Bulgaria"
+  BUL_Occupied_Monarchy_ni_ADJ:0 "Bulgarian"
+  BUL_Occupied_Monarchy_rc_ADJ:0 "Bulgarian"
+  BUL_Occupied_Monarchy_lb_ADJ:0 "Bulgarian"
+  BUL_Occupied_Monarchy_ss_ADJ:0 "Bulgarian"
+  BUL_Occupied_Monarchy_jc_ADJ:0 "Bulgarian"
+  BUL_Occupied_Monarchy_ds_ADJ:0 "Bulgarian"
+  BUL_Occupied_Monarchy_cn_ADJ:0 "Bulgarian"
+  BUL_Occupied_Monarchy_an_ADJ:0 "Bulgarian"
+
+  BUL_Occupied_Republic_ni:0 "National Republic of Bulgaria"
+  BUL_Occupied_Republic_ni_DEF:0 "The National Republic of Bulgaria"
+  BUL_Occupied_Republic_ds:0 "Bulgarian Federation"
+  BUL_Occupied_Republic_ds_DEF:0 "The Bulgarian Federation"
+  BUL_Occupied_Republic_rc:0 "Bulgarian Federation"
+  BUL_Occupied_Republic_rc_DEF:0 "The Bulgarian Federation"
+  BUL_Occupied_Republic_an:0 "Bulgarian Federation"
+  BUL_Occupied_Republic_an_DEF:0 "The Bulgarian Federation"
+  BUL_Occupied_Republic_cn:0 "Bulgarian Federation"
+  BUL_Occupied_Republic_cn_DEF:0 "The Bulgarian Federation"
+  BUL_Occupied_Republic_lb:0 "Bulgarian Federation"
+  BUL_Occupied_Republic_lb_DEF:0 "The Bulgarian Federation"
+  BUL_Occupied_Republic_ss:0 "Bulgarian Federation"
+  BUL_Occupied_Republic_ss_DEF:0 "The Bulgarian Federation"
+  BUL_Occupied_Republic_jc:0 "Sovereign Assembly of Bulgaria"
+  BUL_Occupied_Republic_jc_DEF:0 "The Sovereign Assembly of Bulgaria"
+  BUL_Occupied_Republic_ni_ADJ:0 "Bulgarian"
+  BUL_Occupied_Republic_rc_ADJ:0 "Bulgarian"
+  BUL_Occupied_Republic_lb_ADJ:0 "Bulgarian"
+  BUL_Occupied_Republic_ss_ADJ:0 "Bulgarian"
+  BUL_Occupied_Republic_jc_ADJ:0 "Bulgarian"
+  BUL_Occupied_Republic_ds_ADJ:0 "Bulgarian"
+  BUL_Occupied_Republic_cn_ADJ:0 "Bulgarian"
+  BUL_Occupied_Republic_an_ADJ:0 "Bulgarian"
+
   DGG_AD_condominium: "Anglo-Dutch Doggerland"
   DGG_AD_condominium_DEF: "The Anglo-Dutch Condominium of the Doggerland"
   DGG_AD_condominium_ADJ: "Doggerlander"
