South American peace deals early work

--- a/localisation/english/PB_annexations_l_english.yml
+++ b/localisation/english/PB_annexations_l_english.yml
@@ -180,6 +180,35 @@
   annexation_persia: "The Fate of Persia"
   annexation_persia_desc: "The region of Persia has been brought under our control as our troops occupy the region. We must now decide what to do with it."
   annexation.6000.a: "Liberate Persia"
+  
+    # SOUTH AMERICA
 
+  annexation_decision_venezuela: "Fate of Venezuela"
+  annexation_decision_venezuela_desc: "The region of Venezuela has been brought under our control as our troops occupy the region. We must now decide what to do with it."
+
+  annexation_venezuela: "The Fate of Venezuela"
+  annexation_venezuela_desc: "The region of Venezuela has been brought under our control as our troops occupy the region. We must now decide what to do with it."
+  annexation.3000.a: "Liberate Venezuela"
+  
+  annexation_decision_cayenne: "Fate of Cayenne"
+  annexation_decision_cayenne_desc: "The region of Cayenne has been brought under our control as our troops occupy the region. We must now decide what to do with it."
+
+  annexation_cayenne: "The Fate of Cayenne"
+  annexation_cayenne_desc: "The region of Cayenne has been brought under our control as our troops occupy the region. We must now decide what to do with it."
+  annexation.3001.a: "Liberate Cayenne"
+  
+  annexation_decision_uruguay: "Fate of Uruguay"
+  annexation_decision_uruguay_desc: "The region of Uruguay has been brought under our control as our troops occupy the region. We must now decide what to do with it."
+
+  annexation_uruguay: "The Fate of Uruguay"
+  annexation_uruguay_desc: "The region of Uruguay has been brought under our control as our troops occupy the region. We must now decide what to do with it."
+  annexation.3002.a: "Liberate Uruguay"
+  
+  annexation_decision_rio_de_la_plata: "Fate of Rio de la Plata"
+  annexation_decision_rio_de_la_plata_desc: "The region of Rio de la Plata has been brought under our control as our troops occupy the region. We must now decide what to do with it."
+
+  annexation_rio_de_la_plata: "The Fate of Rio de la Plata"
+  annexation_rio_de_la_plata_desc: "The region of Rio de la Plata has been brought under our control as our troops occupy the region. We must now decide what to do with it."
+  annexation.3003.a: "Liberate Rio de la Plata"
 
   #Events
