Balkans Peace Deal Work

--- a/localisation/english/PB_countries_cosmetic_l_english.yml
+++ b/localisation/english/PB_countries_cosmetic_l_english.yml
@@ -7085,6 +7085,106 @@
   BUL_Occupied_Republic_cn_ADJ:0 "Bulgarian"
   BUL_Occupied_Republic_an_ADJ:0 "Bulgarian"
 
+  MAC_Occupied_Monarchy_ni:0 "Duchy of Macedonia"
+  MAC_Occupied_Monarchy_ni_DEF:0 "The Duchy of Macedonia"
+  MAC_Occupied_Monarchy_ds:0 "Duchy of Macedonia"
+  MAC_Occupied_Monarchy_ds_DEF:0 "The Duchy of Macedonia"
+  MAC_Occupied_Monarchy_rc:0 "Duchy of Macedonia"
+  MAC_Occupied_Monarchy_rc_DEF:0 "The Duchy of Macedonia"
+  MAC_Occupied_Monarchy_an:0 "Duchy of Macedonia"
+  MAC_Occupied_Monarchy_an_DEF:0 "The Duchy of Macedonia"
+  MAC_Occupied_Monarchy_cn:0 "Duchy of Macedonia"
+  MAC_Occupied_Monarchy_cn_DEF:0 "The Duchy of Macedonia"
+  MAC_Occupied_Monarchy_lb:0 "Duchy of Macedonia"
+  MAC_Occupied_Monarchy_lb_DEF:0 "The Duchy of Macedonia"
+  MAC_Occupied_Monarchy_ss:0 "Duchy of Macedonia"
+  MAC_Occupied_Monarchy_ss_DEF:0 "The Duchy of Macedonia"
+  MAC_Occupied_Monarchy_jc:0 "Macedonian Republic"
+  MAC_Occupied_Monarchy_jc_DEF:0 "The Macedonian Republic"
+  MAC_Occupied_Monarchy_ni_ADJ:0 "Macedonian"
+  MAC_Occupied_Monarchy_rc_ADJ:0 "Macedonian"
+  MAC_Occupied_Monarchy_lb_ADJ:0 "Macedonian"
+  MAC_Occupied_Monarchy_ss_ADJ:0 "Macedonian"
+  MAC_Occupied_Monarchy_jc_ADJ:0 "Macedonian"
+  MAC_Occupied_Monarchy_ds_ADJ:0 "Macedonian"
+  MAC_Occupied_Monarchy_cn_ADJ:0 "Macedonian"
+  MAC_Occupied_Monarchy_an_ADJ:0 "Macedonian"
+
+  MAC_Occupied_Republic_ni:0 "Macedonian National Revolutionary State"
+  MAC_Occupied_Republic_ni_DEF:0 "The Macedonian National Revolutionary State"
+  MAC_Occupied_Republic_ds:0 "Macedonian Republic"
+  MAC_Occupied_Republic_ds_DEF:0 "The Macedonian Republic"
+  MAC_Occupied_Republic_rc:0 "Macedonian Republic"
+  MAC_Occupied_Republic_rc_DEF:0 "The Macedonian Republic"
+  MAC_Occupied_Republic_an:0 "Macedonian Republic"
+  MAC_Occupied_Republic_an_DEF:0 "The Macedonian Republic"
+  MAC_Occupied_Republic_cn:0 "Macedonian Republic"
+  MAC_Occupied_Republic_cn_DEF:0 "The Macedonian Republic"
+  MAC_Occupied_Republic_lb:0 "Macedonian Republic"
+  MAC_Occupied_Republic_lb_DEF:0 "The Macedonian Republic"
+  MAC_Occupied_Republic_ss:0 "Macedonian Republic"
+  MAC_Occupied_Republic_ss_DEF:0 "The Macedonian Republic"
+  MAC_Occupied_Republic_jc:0 "Macedonian Republic"
+  MAC_Occupied_Republic_jc_DEF:0 "The Macedonian Republic"
+  MAC_Occupied_Republic_ni_ADJ:0 "Macedonian"
+  MAC_Occupied_Republic_rc_ADJ:0 "Macedonian"
+  MAC_Occupied_Republic_lb_ADJ:0 "Macedonian"
+  MAC_Occupied_Republic_ss_ADJ:0 "Macedonian"
+  MAC_Occupied_Republic_jc_ADJ:0 "Macedonian"
+  MAC_Occupied_Republic_ds_ADJ:0 "Macedonian"
+  MAC_Occupied_Republic_cn_ADJ:0 "Macedonian"
+  MAC_Occupied_Republic_an_ADJ:0 "Macedonian"
+
+  ALB_Occupied_Monarchy_ni:0 "Principality of Albania"
+  ALB_Occupied_Monarchy_ni_DEF:0 "The Principality of Albania"
+  ALB_Occupied_Monarchy_ds:0 "Principality of Albania"
+  ALB_Occupied_Monarchy_ds_DEF:0 "The Principality of Albania"
+  ALB_Occupied_Monarchy_rc:0 "Principality of Albania"
+  ALB_Occupied_Monarchy_rc_DEF:0 "The Principality of Albania"
+  ALB_Occupied_Monarchy_an:0 "Principality of Albania"
+  ALB_Occupied_Monarchy_an_DEF:0 "The Principality of Albania"
+  ALB_Occupied_Monarchy_cn:0 "Principality of Albania"
+  ALB_Occupied_Monarchy_cn_DEF:0 "The Principality of Albania"
+  ALB_Occupied_Monarchy_lb:0 "Principality of Albania"
+  ALB_Occupied_Monarchy_lb_DEF:0 "The Principality of Albania"
+  ALB_Occupied_Monarchy_ss:0 "Principality of Albania"
+  ALB_Occupied_Monarchy_ss_DEF:0 "The Principality of Albania"
+  ALB_Occupied_Monarchy_jc:0 "Common Republic of Albania"
+  ALB_Occupied_Monarchy_jc_DEF:0 "The Common Republic of Albania"
+  ALB_Occupied_Monarchy_ni_ADJ:0 "Albanian"
+  ALB_Occupied_Monarchy_rc_ADJ:0 "Albanian"
+  ALB_Occupied_Monarchy_lb_ADJ:0 "Albanian"
+  ALB_Occupied_Monarchy_ss_ADJ:0 "Albanian"
+  ALB_Occupied_Monarchy_jc_ADJ:0 "Albanian"
+  ALB_Occupied_Monarchy_ds_ADJ:0 "Albanian"
+  ALB_Occupied_Monarchy_cn_ADJ:0 "Albanian"
+  ALB_Occupied_Monarchy_an_ADJ:0 "Albanian"
+
+  ALB_Occupied_Republic_ni:0 "Great Albanian Homeland"
+  ALB_Occupied_Republic_ni_DEF:0 "The Great Homeland of the Albanian Nation"
+  ALB_Occupied_Republic_ds:0 "Albanian Republic"
+  ALB_Occupied_Republic_ds_DEF:0 "The Albanian Republic"
+  ALB_Occupied_Republic_rc:0 "Albanian Republic"
+  ALB_Occupied_Republic_rc_DEF:0 "The Albanian Republic"
+  ALB_Occupied_Republic_an:0 "Albanian Republic"
+  ALB_Occupied_Republic_an_DEF:0 "The Albanian Republic"
+  ALB_Occupied_Republic_cn:0 "Albanian Republic"
+  ALB_Occupied_Republic_cn_DEF:0 "The Albanian Republic"
+  ALB_Occupied_Republic_lb:0 "Albanian Republic"
+  ALB_Occupied_Republic_lb_DEF:0 "The Albanian Republic"
+  ALB_Occupied_Republic_ss:0 "Albanian Republic"
+  ALB_Occupied_Republic_ss_DEF:0 "The Albanian Republic"
+  ALB_Occupied_Republic_jc:0 "Common Republic of Albania"
+  ALB_Occupied_Republic_jc_DEF:0 "The Common Republic of Albania"
+  ALB_Occupied_Republic_ni_ADJ:0 "Albanian"
+  ALB_Occupied_Republic_rc_ADJ:0 "Albanian"
+  ALB_Occupied_Republic_lb_ADJ:0 "Albanian"
+  ALB_Occupied_Republic_ss_ADJ:0 "Albanian"
+  ALB_Occupied_Republic_jc_ADJ:0 "Albanian"
+  ALB_Occupied_Republic_ds_ADJ:0 "Albanian"
+  ALB_Occupied_Republic_cn_ADJ:0 "Albanian"
+  ALB_Occupied_Republic_an_ADJ:0 "Albanian"
+
   DGG_AD_condominium: "Anglo-Dutch Doggerland"
   DGG_AD_condominium_DEF: "The Anglo-Dutch Condominium of the Doggerland"
   DGG_AD_condominium_ADJ: "Doggerlander"
