--- a/localisation/english/PB_countries_cosmetic_l_english.yml
+++ b/localisation/english/PB_countries_cosmetic_l_english.yml
@@ -7185,6 +7185,56 @@
   ALB_Occupied_Republic_cn_ADJ:0 "Albanian"
   ALB_Occupied_Republic_an_ADJ:0 "Albanian"
 
+  GRE_Occupied_Monarchy_ni:0 "Hellenic Kingdom"
+  GRE_Occupied_Monarchy_ni_DEF:0 "The Hellenic Kingdom"
+  GRE_Occupied_Monarchy_ds:0 "Hellenic Kingdom"
+  GRE_Occupied_Monarchy_ds_DEF:0 "The Hellenic Kingdom"
+  GRE_Occupied_Monarchy_rc:0 "Hellenic Kingdom"
+  GRE_Occupied_Monarchy_rc_DEF:0 "The Hellenic Kingdom"
+  GRE_Occupied_Monarchy_an:0 "Hellenic Kingdom"
+  GRE_Occupied_Monarchy_an_DEF:0 "The Hellenic Kingdom"
+  GRE_Occupied_Monarchy_cn:0 "Hellenic Kingdom"
+  GRE_Occupied_Monarchy_cn_DEF:0 "The Hellenic Kingdom"
+  GRE_Occupied_Monarchy_lb:0 "Hellenic Kingdom"
+  GRE_Occupied_Monarchy_lb_DEF:0 "The Hellenic Kingdom"
+  GRE_Occupied_Monarchy_ss:0 "Hellenic Kingdom"
+  GRE_Occupied_Monarchy_ss_DEF:0 "The Hellenic Kingdom"
+  GRE_Occupied_Monarchy_jc:0 "New Hellenic Republic"
+  GRE_Occupied_Monarchy_jc_DEF:0 "The New Hellenic Republic"
+  GRE_Occupied_Monarchy_ni_ADJ:0 "Greek"
+  GRE_Occupied_Monarchy_rc_ADJ:0 "Greek"
+  GRE_Occupied_Monarchy_lb_ADJ:0 "Greek"
+  GRE_Occupied_Monarchy_ss_ADJ:0 "Greek"
+  GRE_Occupied_Monarchy_jc_ADJ:0 "Greek"
+  GRE_Occupied_Monarchy_ds_ADJ:0 "Greek"
+  GRE_Occupied_Monarchy_cn_ADJ:0 "Greek"
+  GRE_Occupied_Monarchy_an_ADJ:0 "Greek"
+
+  GRE_Occupied_Republic_ni:0 "Greek Vanguard Republic"
+  GRE_Occupied_Republic_ni_DEF:0 "The Greek Vanguard Republic"
+  GRE_Occupied_Republic_ds:0 "Hellenic Republic"
+  GRE_Occupied_Republic_ds_DEF:0 "The Hellenic Republic"
+  GRE_Occupied_Republic_rc:0 "Hellenic Republic"
+  GRE_Occupied_Republic_rc_DEF:0 "The Hellenic Republic"
+  GRE_Occupied_Republic_an:0 "Hellenic Republic"
+  GRE_Occupied_Republic_an_DEF:0 "The Hellenic Republic"
+  GRE_Occupied_Republic_cn:0 "Hellenic Republic"
+  GRE_Occupied_Republic_cn_DEF:0 "The Hellenic Republic"
+  GRE_Occupied_Republic_lb:0 "Hellenic Republic"
+  GRE_Occupied_Republic_lb_DEF:0 "The Hellenic Republic"
+  GRE_Occupied_Republic_ss:0 "Hellenic Republic"
+  GRE_Occupied_Republic_ss_DEF:0 "The Hellenic Republic"
+  GRE_Occupied_Republic_jc:0 "Free Hellenic Commonwealth"
+  GRE_Occupied_Republic_jc_DEF:0 "The Free Hellenic Commonwealth"
+  GRE_Occupied_Republic_ni_ADJ:0 "Greek"
+  GRE_Occupied_Republic_rc_ADJ:0 "Greek"
+  GRE_Occupied_Republic_lb_ADJ:0 "Greek"
+  GRE_Occupied_Republic_ss_ADJ:0 "Greek"
+  GRE_Occupied_Republic_jc_ADJ:0 "Greek"
+  GRE_Occupied_Republic_ds_ADJ:0 "Greek"
+  GRE_Occupied_Republic_cn_ADJ:0 "Greek"
+  GRE_Occupied_Republic_an_ADJ:0 "Greek"
+
   DGG_AD_condominium: "Anglo-Dutch Doggerland"
   DGG_AD_condominium_DEF: "The Anglo-Dutch Condominium of the Doggerland"
   DGG_AD_condominium_ADJ: "Doggerlander"
