--- a/localisation/english/PB_country_specific/PB_France_l_english.yml
+++ b/localisation/english/PB_country_specific/PB_France_l_english.yml
@@ -44,6 +44,7 @@
   FRA_charles_de_gaulle: "Charles de Gaulle"
   FRA_rene_coty: "René Coty"
   FRA_leon_blum: "Léon Blum"
+  FRA_edouard_herriot: "Édouard Herriot"
   FRA_benoit_frachon: "Benoit Frachon"
   FRA_joseph_jacquemotte: "Joseph Jacquemotte"
   FRA_daniel_delchingen: "Daniel Ney d'Elchingen"
