--- a/localisation/english/PB_country_specific/PB_France_l_english.yml
+++ b/localisation/english/PB_country_specific/PB_France_l_english.yml
@@ -47,7 +47,7 @@
   FRA_edouard_herriot: "Édouard Herriot"
   FRA_benoit_frachon: "Benoit Frachon"
   FRA_joseph_jacquemotte: "Joseph Jacquemotte"
-  FRA_daniel_delchingen: "Daniel Ney d'Elchingen"
+  FRA_eugene_schueller: "Eugène Schueller"
 
   ### FIELD MARSHALS ##
   FRA_hubert_lyautey: "Hubert Lyautey"
