Indonesia work again, gonna move on to new region soon

--- a/localisation/english/PB_Generic_Focus_l_english.yml
+++ b/localisation/english/PB_Generic_Focus_l_english.yml
@@ -29,7 +29,7 @@ PB_Into_The_World_desc: "Into the World"
 PB_Against_The_Giant: "Against the Giants"
 PB_Against_The_Giant_desc: "Against the Giants"
 
-# Balkan Regionals
+##Balkan Regionals
 
 PB_The_Ticking_Powderkeg:0 "The Ticking Powderkeg"
 PB_The_Ticking_Powderkeg_desc:0 "The Ticking Powderkeg"
@@ -57,6 +57,22 @@ PB_A_Crescent_Whole:0 "A Crescent, Whole"
 PB_For_The_Sultans_Cause:0 "For the Sultan's Cause"
 PB_Against_Ottoman_Domination:0 "Against Ottoman Domination"
 PB_Topple_The_Kings:0 "Topple the Kings!"
+
+##INDONESIAN##
+PB_Aftershocks_Of_Krakatoa:0 "Afterschocks of Krakatoa"
+PB_Tending_The_Land:0 "Tending the Land"
+PB_Increased_Relief_Task_Forces:0 "Increased Relief Task Forces"
+PB_Repair_Damaged_Munitions:0 "Repair Damaged Munition Factories"
+PB_Assuring_Our_Citizens:0 "Assuring our Citizens"
+PB_Clearing_Out_Remaining_Debris:0 "Clearing out Remaining Debris"
+PB_Krakatoa_Quiet_Again:0 "Krakatoa, Quiut Again"
+PB_A_Military_From_The_Literal_Ashes:0 "A Military from the Literal Ashes"
+PB_Improve_Our_Training_Programs:0 "Improve our Training Programs"
+PB_Scavenge_Dutch_Supply_Depots:0 "Scavenge Dutch Supply Depots"
+PB_Restart_The_Arms_Race:0 "Restart the Arms Race"
+PB_Experimental_Design_Programs:0 "Experimental Design Programs"
+PB_Quantity_Over_Quality:0 "Quantity over Quality"
+PB_The_Islands_Defenders:0 "The Island's Defenders"
 
 
 
