German East Asia Push

--- a/localisation/english/PB_countries_cosmetic_l_english.yml
+++ b/localisation/english/PB_countries_cosmetic_l_english.yml
@@ -7298,3 +7298,6 @@
   PHI_Mexican: "Aerial Captaincy of the Philippines"
   PHI_Mexican_DEF: "Mexican Aerial Captaincy of the Philippine Islands"
   PHI_Mexican_ADJ: "Filipino"
+  
+  KRA_Big: "Ring of Fire"
+  
