Peace Deal Work

--- a/localisation/english/PB_countries_cosmetic_l_english.yml
+++ b/localisation/english/PB_countries_cosmetic_l_english.yml
@@ -7235,6 +7235,56 @@
   GRE_Occupied_Republic_cn_ADJ:0 "Greek"
   GRE_Occupied_Republic_an_ADJ:0 "Greek"
 
+  SRD_Occupied_Monarchy_ni:0 "Principality of Sardinia"
+  SRD_Occupied_Monarchy_ni_DEF:0 "The Principality of Sardinia"
+  SRD_Occupied_Monarchy_ds:0 "Principality of Sardinia"
+  SRD_Occupied_Monarchy_ds_DEF:0 "The Principality of Sardinia"
+  SRD_Occupied_Monarchy_rc:0 "Principality of Sardinia"
+  SRD_Occupied_Monarchy_rc_DEF:0 "The Principality of Sardinia"
+  SRD_Occupied_Monarchy_an:0 "Principality of Sardinia"
+  SRD_Occupied_Monarchy_an_DEF:0 "The Principality of Sardinia"
+  SRD_Occupied_Monarchy_cn:0 "Principality of Sardinia"
+  SRD_Occupied_Monarchy_cn_DEF:0 "The Principality of Sardinia"
+  SRD_Occupied_Monarchy_lb:0 "Principality of Sardinia"
+  SRD_Occupied_Monarchy_lb_DEF:0 "The Principality of Sardinia"
+  SRD_Occupied_Monarchy_ss:0 "Principality of Sardinia"
+  SRD_Occupied_Monarchy_ss_DEF:0 "The Principality of Sardinia"
+  SRD_Occupied_Monarchy_jc:0 "Sardinian Republic"
+  SRD_Occupied_Monarchy_jc_DEF:0 "The Sardinian Republic"
+  SRD_Occupied_Monarchy_ni_ADJ:0 "Sardinian"
+  SRD_Occupied_Monarchy_rc_ADJ:0 "Sardinian"
+  SRD_Occupied_Monarchy_lb_ADJ:0 "Sardinian"
+  SRD_Occupied_Monarchy_ss_ADJ:0 "Sardinian"
+  SRD_Occupied_Monarchy_jc_ADJ:0 "Sardinian"
+  SRD_Occupied_Monarchy_ds_ADJ:0 "Sardinian"
+  SRD_Occupied_Monarchy_cn_ADJ:0 "Sardinian"
+  SRD_Occupied_Monarchy_an_ADJ:0 "Sardinian"
+
+  SRD_Occupied_Republic_ni:0 "Sardinian Republic"
+  SRD_Occupied_Republic_ni_DEF:0 "The Sardinian Republic"
+  SRD_Occupied_Republic_ds:0 "Sardinian Republic"
+  SRD_Occupied_Republic_ds_DEF:0 "The Sardinian Republic"
+  SRD_Occupied_Republic_rc:0 "Sardinian Republic"
+  SRD_Occupied_Republic_rc_DEF:0 "The Sardinian Republic"
+  SRD_Occupied_Republic_an:0 "Sardinian Republic"
+  SRD_Occupied_Republic_an_DEF:0 "The Sardinian Republic"
+  SRD_Occupied_Republic_cn:0 "Sardinian Republic"
+  SRD_Occupied_Republic_cn_DEF:0 "The Sardinian Republic"
+  SRD_Occupied_Republic_lb:0 "Sardinian Republic"
+  SRD_Occupied_Republic_lb_DEF:0 "The Sardinian Republic"
+  SRD_Occupied_Republic_ss:0 "Sardinian Republic"
+  SRD_Occupied_Republic_ss_DEF:0 "The Sardinian Republic"
+  SRD_Occupied_Republic_jc:0 "Sardinian Republic"
+  SRD_Occupied_Republic_jc_DEF:0 "The Sardinian Republic"
+  SRD_Occupied_Republic_ni_ADJ:0 "Sardinian"
+  SRD_Occupied_Republic_rc_ADJ:0 "Sardinian"
+  SRD_Occupied_Republic_lb_ADJ:0 "Sardinian"
+  SRD_Occupied_Republic_ss_ADJ:0 "Sardinian"
+  SRD_Occupied_Republic_jc_ADJ:0 "Sardinian"
+  SRD_Occupied_Republic_ds_ADJ:0 "Sardinian"
+  SRD_Occupied_Republic_cn_ADJ:0 "Sardinian"
+  SRD_Occupied_Republic_an_ADJ:0 "Sardinian"
+
   DGG_AD_condominium: "Anglo-Dutch Doggerland"
   DGG_AD_condominium_DEF: "The Anglo-Dutch Condominium of the Doggerland"
   DGG_AD_condominium_ADJ: "Doggerlander"
