fuck it who cares anymore

--- a/localisation/english/PB_countries_cosmetic_l_english.yml
+++ b/localisation/english/PB_countries_cosmetic_l_english.yml
@@ -7285,6 +7285,56 @@
   SRD_Occupied_Republic_cn_ADJ:0 "Sardinian"
   SRD_Occupied_Republic_an_ADJ:0 "Sardinian"
 
+  PGA_Occupied_Monarchy_ni:0 "Kingdom of Galicia and Lodomeria"
+  PGA_Occupied_Monarchy_ni_DEF:0 "The Kingdom of Galicia and Lodomeria"
+  PGA_Occupied_Monarchy_ds:0 "Kingdom of Galicia and Lodomeria"
+  PGA_Occupied_Monarchy_ds_DEF:0 "The Kingdom of Galicia and Lodomeria"
+  PGA_Occupied_Monarchy_rc:0 "Kingdom of Galicia and Lodomeria"
+  PGA_Occupied_Monarchy_rc_DEF:0 "The Kingdom of Galicia and Lodomeria"
+  PGA_Occupied_Monarchy_an:0 "Kingdom of Galicia and Lodomeria"
+  PGA_Occupied_Monarchy_an_DEF:0 "The Kingdom of Galicia and Lodomeria"
+  PGA_Occupied_Monarchy_cn:0 "Kingdom of Galicia and Lodomeria"
+  PGA_Occupied_Monarchy_cn_DEF:0 "The Kingdom of Galicia and Lodomeria"
+  PGA_Occupied_Monarchy_lb:0 "Kingdom of Galicia and Lodomeria"
+  PGA_Occupied_Monarchy_lb_DEF:0 "The Kingdom of Galicia and Lodomeria"
+  PGA_Occupied_Monarchy_ss:0 "Kingdom of Galicia and Lodomeria"
+  PGA_Occupied_Monarchy_ss_DEF:0 "The Kingdom of Galicia and Lodomeria"
+  PGA_Occupied_Monarchy_jc:0 "Enlightened Republic of Galicia"
+  PGA_Occupied_Monarchy_jc_DEF:0 "The Enlightened Republic of Galicia"
+  PGA_Occupied_Monarchy_ni_ADJ:0 "Galician"
+  PGA_Occupied_Monarchy_rc_ADJ:0 "Galician"
+  PGA_Occupied_Monarchy_lb_ADJ:0 "Galician"
+  PGA_Occupied_Monarchy_ss_ADJ:0 "Galician"
+  PGA_Occupied_Monarchy_jc_ADJ:0 "Galician"
+  PGA_Occupied_Monarchy_ds_ADJ:0 "Galician"
+  PGA_Occupied_Monarchy_cn_ADJ:0 "Galician"
+  PGA_Occupied_Monarchy_an_ADJ:0 "Galician"
+
+  PGA_Occupied_Republic_ni:0 "Republic of Galicia"
+  PGA_Occupied_Republic_ni_DEF:0 "The Republic of Galicia"
+  PGA_Occupied_Republic_ds:0 "Republic of Galicia"
+  PGA_Occupied_Republic_ds_DEF:0 "The Republic of Galicia"
+  PGA_Occupied_Republic_rc:0 "Republic of Galicia"
+  PGA_Occupied_Republic_rc_DEF:0 "The Republic of Galicia"
+  PGA_Occupied_Republic_an:0 "Republic of Galicia"
+  PGA_Occupied_Republic_an_DEF:0 "The Republic of Galicia"
+  PGA_Occupied_Republic_cn:0 "Republic of Galicia"
+  PGA_Occupied_Republic_cn_DEF:0 "The Republic of Galicia"
+  PGA_Occupied_Republic_lb:0 "Republic of Galicia"
+  PGA_Occupied_Republic_lb_DEF:0 "The Republic of Galicia"
+  PGA_Occupied_Republic_ss:0 "Republic of Galicia"
+  PGA_Occupied_Republic_ss_DEF:0 "The Republic of Galicia"
+  PGA_Occupied_Republic_jc:0 "Enlightened Republic of Galicia"
+  PGA_Occupied_Republic_jc_DEF:0 "The Enlightened Republic of Galicia"
+  PGA_Occupied_Republic_ni_ADJ:0 "Galician"
+  PGA_Occupied_Republic_rc_ADJ:0 "Galician"
+  PGA_Occupied_Republic_lb_ADJ:0 "Galician"
+  PGA_Occupied_Republic_ss_ADJ:0 "Galician"
+  PGA_Occupied_Republic_jc_ADJ:0 "Galician"
+  PGA_Occupied_Republic_ds_ADJ:0 "Galician"
+  PGA_Occupied_Republic_cn_ADJ:0 "Galician"
+  PGA_Occupied_Republic_an_ADJ:0 "Galician"
+
   DGG_AD_condominium: "Anglo-Dutch Doggerland"
   DGG_AD_condominium_DEF: "The Anglo-Dutch Condominium of the Doggerland"
   DGG_AD_condominium_ADJ: "Doggerlander"
