--- a/localisation/english/PB_countries_l_english.yml
+++ b/localisation/english/PB_countries_l_english.yml
@@ -8200,21 +8200,21 @@
     NKR_cn_ADJ:0 "Ukrainian"
     NKR_an_ADJ:0 "Ukrainian"
 
-    AUR_ni:0 "State of Asturias"
-    AUR_ni_DEF:0 "the State of Asturias"
-    AUR_ds:0 "Kingdom of Asturias"
-    AUR_ds_DEF:0 "the Kingdom of Asturias"
-    AUR_rc:0 "Kingdom of Asturias"
-    AUR_rc_DEF:0 "the Kingdom of Asturias"
-    AUR_cn:0 "Kingdom of Asturias"
-    AUR_cn_DEF:0 "the Kingdom of Asturias"
-    AUR_lb:0 "Kingdom of Asturias"
-    AUR_lb_DEF:0 "the Kingdom of Asturias"
-    AUR_ss:0 "Kingdom of Asturias"
-    AUR_ss_DEF:0 "the Kingdom of Asturias"
-    AUR_jc:0 "Republic of Asturias"
-    AUR_jc_DEF:0 "the Popular Republic of Asturias"
-    AUR_ADJ:0 "Asturian" 
+    AUR_ni:0 "Constantinople Free State"
+    AUR_ni_DEF:0 "The Constantinople Free State"
+    AUR_ds:0 "Free City of Constantinople"
+    AUR_ds_DEF:0 "The Free City of Constantinople"
+    AUR_rc:0 "Free City of Constantinople"
+    AUR_rc_DEF:0 "The Free City of Constantinople"
+    AUR_cn:0 "Free City of Constantinople"
+    AUR_cn_DEF:0 "The Free City of Constantinople"
+    AUR_lb:0 "Free City of Constantinople"
+    AUR_lb_DEF:0 "The Free City of Constantinople"
+    AUR_ss:0 "Free City of Constantinople"
+    AUR_ss_DEF:0 "The Free City of Constantinople"
+    AUR_jc:0 "Constantinople Autonomous Community"
+    AUR_jc_DEF:0 "The Popular Constantinople Autonomous Community"
+    AUR_ADJ:0 "Turko-Hellenic" 
 
     GAL:0 "Galicia"
     GAL_DEF:0 "the Republic of Galicia"
